<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblBaseSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_sentence"
        android:layout_marginStart="5pt"
        android:layout_marginTop="6pt"
        style="@style/MediumText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextYears"
        android:layout_width="30pt"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/MediumText"
        android:layout_marginStart="1pt"
        android:inputType="number"
        android:hint="@string/years"
        app:layout_constraintLeft_toRightOf="@+id/lblBaseSentence"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblBaseSentence" />

    <EditText
        android:id="@+id/editTextMonths"
        android:layout_width="30pt"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/MediumText"
        android:layout_marginStart="1pt"
        android:inputType="number"
        android:hint="@string/months"
        app:layout_constraintLeft_toRightOf="@+id/editTextYears"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblBaseSentence" />

    <TextView
        android:id="@+id/lblIncrease"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5pt"
        android:layout_marginTop="12pt"
        android:text="@string/increase"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBaseSentence" />

    <Spinner
        android:id="@+id/spinnerIncrease"
        android:layout_width="50pt"
        android:layout_height="wrap_content"
        android:entries="@array/cutoff_values"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblIncrease"
        app:layout_constraintStart_toEndOf="@+id/lblIncrease" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_marginTop="12pt"
        android:layout_marginStart="6pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        style="@style/MediumText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblIncrease" />

    <EditText
        android:id="@+id/textResult"
        android:layout_marginLeft="5pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:enabled="false"
        android:textColor="@drawable/edit_text"
        style="@style/MediumText"
        app:layout_constraintStart_toEndOf="@+id/lblResult"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblResult" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="15dp"
        android:text="@string/cancel"
        style="@style/MediumText"
        android:onClick="onCancelClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="15dp"
        android:text="@string/calculate"
        style="@style/MediumText"
        android:onClick="onCalculateClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>